Fixed z-index for heart icon

--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -9,7 +9,7 @@
 header{
     position: fixed;
     width: 100%;
-    z-index: 10;
+    z-index: 100;
 }
 
 body{
